# Hero-fight

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: main.cpp
src/characters/: Character.cpp  Character.h  Warrior.cpp  Warrior.h  Wizard.cpp  Wizard.h
src/characters/jobs/: Job.cpp  Job.h  Warrior.cpp  Warrior.h  Wizard.cpp  Wizard.h
src/characters/strikes/: Fireball.cpp  Fireball.h  Strike.cpp  Strike.h  SwordStrike.cpp  SwordStrike.h
